test/programs/invalid_programs/ambiguous_reference.jm
#!AmbiguityError

def foo()
end

module Foo
  def foo()
  end

  foo()
end
